# eLibrary-Manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Gemini-Dawnstar eBook Manager PRD.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.codacy/: codacy.yaml
.github/workflows/: ci.yml
automation/reports/: claude-audit.md  dashboard.html  dashboard.md  findings-db.json  gemini-audit.md  merged-action-plan.md  orchestration-run.json
backend/alembic/: env.py
backend/app/: __init__.py  ai_engine.py  auth.py  chapter_cache.py  config.py  database.py  edgetts_service.py  exceptions.py  gtts_service.py  logging_config.py  main.py  middleware.py  models.py  nas_cache.py  nas_health.py  rate_limit.py  reader_engine.py  repositories.py  scan_progress.py  scanner.py  schemas.py  (+1 more)
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
scripts/: setup_nas_mount.sh
specs/: 001-library-management.md  002-reader-interface.md  003-ai-summarization.md  004-bookmarks.md  005-notes-annotations.md  006-text-to-speech.md  007-settings.md  008-file-parsers.md  009-nas-integration.md  INDEX.md
tests/: conftest.py  test_api.py  test_scanner.py  test_security.py
uploads/: ABCs of Human Behavior. Behavioral Principles for the Practicing Clinician (Jonas Ramnero,Niklas Torneke,Kelly Wilson) (z-library.sk, 1lib.sk, z-lib.sk).epub  Python Essentials F.epub  The American Psychiatric Association Practice Guideline for the Prevention and Treatment of Delirium (American Psychiatric Association) (z-library.sk, 1lib.sk, z-lib.sk).epub
(+44 files in other folders)
